# crainets

./: .gitignore  LICENSE.md  README.md  ml_pipeline.sublime-workspace  pyproject.toml  test.py
.github/workflows/: crai-nets.yaml  jesus.yaml
babyjesus/base/: trainer_base.py
babyjesus/config/: logger.py
babyjesus/essentials/: metrics.py  multi_loss.py  multi_tracker.py
babyjesus/models/efficientnet/: __init__.py  config.py  efficientnet.py
babyjesus/trainer/: trainer.py
crainet/base/: trainer_base.py
crainet/config/: logger.py
crainet/essentials/: multi_tracker.py
crainet/models/blocks/: __init__.py  basicblock.py  bottleneck.py  mbconvblock.py
crainet/models/efficientnet/: config.py  efficientnet.py
crainet/trainer/: trainer.py
crainets/base/: trainer_base.py
crainets/config/: logger.py
crainets/essentials/: metrics.py  multi_loss.py  multi_metric.py  multi_tracker.py
crainets/losses/: SSIMLoss.py
crainets/models/: __init__.py
crainets/models/3Dcnn/: 3dcnn.py
crainets/trainer/: trainer.py
deepness/base/: trainer_base.py
deepness/essentials/: multi_metric.py  multi_tracker.py
deepness/trainer/: trainer.py
jesus/base/: trainer_base.py
jesus/essentials/: multi_tracker.py
jesus/trainer/: trainer.py
models/blocks/: basic_upblock.py  squeeze_excitation.py
models/efficientnet/: efficientnet.py
testing/: config.py  data_loader.py  test_efficientnet.py  test_trainer.py
testing/deepness/: config.py  data_loader.py
testing/jona_testing_hub/: sanity_network_check.py
testing/src/: base_trainer.py
(+56 files in other folders)
