[tool.poetry]
name = "deepness"
version = "0.1.0"
description = "deep learning utility library"
authors = ["JonNesvold <jon.nesvold@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"

[tool.poetry.dev-dependencies]
torchvision = "^0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
