[tool.poetry]
name = "crainets"
version = "0.1.0-beta"
description = "deep learning utility library"
authors = ["JonNesvold <jon.nesvold@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
colorlog = "^5.0.1"
py3nvml = "^0.2.6"
numpy = "^1.20.2"
pytest = "^6.2.4"
flake8 = "^3.9.2"

[tool.poetry.dev-dependencies]
torchvision = "^0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
